# pki-ra

./: .gitignore  README.md  build.gradle  gradle.properties.example  settings.gradle
docs/entity-details/: ra-entity.md
docs/gemini-agent/: gemini-agent.md
docs/ra-ad-csr-service/: 01-analysis-and-plan.md  02-component-design.md  03-api-specification.md  04-common-bean-reuse.md  05-error-code-strategy.md  06-ra-config-table.md  07-database-design.md  08-csr-validation-pipeline.md  09-security-architecture.md  10-logging-observability.md  11-deployment-profile-configuration.md  12-testing-strategy.md  13-ad-authentication-payload.md  detail-component-design.docx
docs/ra-ad-csr-service/docgen/: generate.js  package-lock.json  package.json
docs/release-notes/: ra-svc-db-config-plan.md  ra-svc-db-config.md
docs/requirements/: ad-auth-brs.md  generate-brs-docx.js  package-lock.json  package.json  send-brs-email.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
subprojects/caservice/: build.gradle
subprojects/common/: build.gradle
subprojects/common/config/: database.properties  logging.properties
subprojects/documentation/: build.gradle
subprojects/gui/: build.gradle
subprojects/ra-client/: build.gradle
subprojects/raservice/: build.gradle
subprojects/scheduler/: build.gradle
subprojects/uiservice/: build.gradle
tools/gemini-mr-agent/: .env.example  README.md  pyproject.toml
tools/gemini-mr-agent/gemini_agent/: __init__.py  agent.py  cli.py  config.py  git_utils.py  gitlab_client.py  tools.py
(+79 files in other folders)
